[gd_scene load_steps=7 format=3 uid="uid://bmvl0mmvq2xrt"]

[ext_resource type="Script" uid="uid://ggdqf2dgh24r" path="res://scripts/terrain_generator.gd" id="1_bwris"]
[ext_resource type="Script" uid="uid://bhfxbci4dpeyx" path="res://scripts/camera_controller.gd" id="2_rwdrj"]
[ext_resource type="Script" uid="uid://bwr2dtr05y1dy" path="res://scripts/top_bar.gd" id="4_2jvji"]
[ext_resource type="Environment" uid="uid://dj268r1axdpa0" path="res://default_env.tres" id="4_rwdrj"]
[ext_resource type="FontFile" uid="uid://c81ebf4wibc8j" path="res://fonts/Font Awesome 7 Sharp-Regular-400.otf" id="5_2jvji"]
[ext_resource type="PackedScene" uid="uid://cp32jgyyj222g" path="res://scenes/TileBrowser.tscn" id="7_y6um0"]

[node name="MapEditor" type="Node3D" groups=["terrain_generator"]]
script = ExtResource("1_bwris")

[node name="Pivot" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Pivot"]
environment = ExtResource("4_rwdrj")

[node name="Camera3D" type="Camera3D" parent="Pivot" groups=["main_camera"]]
script = ExtResource("2_rwdrj")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707106, 0.707106, 0, -0.707106, 0.707106, 0, 10, 0)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TopBar" type="HBoxContainer" parent="UI"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 19.0
grow_horizontal = 2
script = ExtResource("4_2jvji")

[node name="LabelTileIcon" type="Label" parent="UI/TopBar"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_2jvji")

[node name="LabelTile" type="Label" parent="UI/TopBar"]
layout_mode = 2

[node name="LabelCameraIcon" type="Label" parent="UI/TopBar"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_2jvji")

[node name="LabelCamera" type="Label" parent="UI/TopBar"]
layout_mode = 2

[node name="LabelHeightIcon" type="Label" parent="UI/TopBar"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_2jvji")

[node name="LabelHeight" type="Label" parent="UI/TopBar"]
layout_mode = 2

[node name="LabelFPSIcon" type="Label" parent="UI/TopBar"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_2jvji")

[node name="LabelFPS" type="Label" parent="UI/TopBar"]
layout_mode = 2

[node name="TileBrowser" parent="UI" instance=ExtResource("7_y6um0")]
anchors_preset = 0
